making sure we call vehicles api only after previous call has ended/failed; removing hard dependency on loading huge map layers

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,10 @@ g path {
     stroke-width: 1px;
     stroke-linejoin: round;
 }
+.streets path {
+    /* to not be on top of vehicles */
+    z-index: -1;
+}
 .vehicles path {
     fill: #fbc02e;
 }
