--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,23 @@ g path {
     stroke-width: 1px;
     stroke-linejoin: round;
 }
+table {
+    background: #fff;
+    border-collapse: collapse;
+}
+th {
+    padding: 6px 20px;
+}
+td {
+    padding: 4px;
+    text-align: center;
+}
+table, th, td {
+    border: 1px solid #808080;
+}
+.hidden {
+  display: none !important;
+}
 .streets {
     opacity: 0.7;
 }
@@ -33,4 +50,23 @@ g path {
 }
 .route-selector {
     font-size: 17px;
+}
+.svg-container {
+    width: 780px;
+}
+.map-legend {
+    width: 200px;
+    font-size: 13px;
+    opacity: 0.8;
+}
+.svg-container,
+.map-legend {
+    display: table-cell;
+}
+.color {
+    background: red;
+    border-radius: 5px;
+    width: 12px;
+    height: 12px;
+    margin: 0 auto;
 }
